@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-06T01:09:29Z",
+  "timestamp" : "2022-07-06T08:15:01Z",
   "count_outdated" : 377,
   "uniques_outdated" : 204,
-  "count" : 402,
-  "uniques" : 218,
+  "count" : 403,
+  "uniques" : 219,
   "clones" : [
     {
       "timestamp": "2022-06-23T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-07-05T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
